# raindrop-io-py

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  README.org  __init__.py  justfile  manage.toml  manage.yaml  pyproject.toml  vulture_whitelist.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  raindropiopy.api.html  raindropiopy.api.rst  raindropiopy.cli.cli.html  raindropiopy.cli.commands.create.html  raindropiopy.cli.commands.help.html  raindropiopy.cli.commands.html  raindropiopy.cli.commands.manage.html  raindropiopy.cli.commands.rst  raindropiopy.cli.commands.search.html  raindropiopy.cli.commands.view_edit.html  raindropiopy.cli.html  raindropiopy.cli.models.create_request.html  raindropiopy.cli.models.event_loop.html  raindropiopy.cli.models.html  raindropiopy.cli.models.raindrop_state.html  raindropiopy.cli.models.rst  raindropiopy.cli.models.search_state.html  raindropiopy.cli.models.spinner.html  raindropiopy.cli.rst  raindropiopy.html  raindropiopy.models.html  raindropiopy.models.rst  raindropiopy.rst  requirements.txt  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  raindropiopy.api.doctree  raindropiopy.cli.cli.doctree  raindropiopy.cli.commands.create.doctree  raindropiopy.cli.commands.doctree  raindropiopy.cli.commands.help.doctree  raindropiopy.cli.commands.manage.doctree  raindropiopy.cli.commands.search.doctree  raindropiopy.cli.commands.view_edit.doctree  raindropiopy.cli.doctree  raindropiopy.cli.models.create_request.doctree  raindropiopy.cli.models.doctree  raindropiopy.cli.models.event_loop.doctree  raindropiopy.cli.models.raindrop_state.doctree  raindropiopy.cli.models.search_state.doctree  raindropiopy.cli.models.spinner.doctree  raindropiopy.doctree  raindropiopy.models.doctree
docs/_sources/: index.rst.txt  raindropiopy.api.rst.txt  raindropiopy.cli.cli.rst.txt  raindropiopy.cli.commands.create.rst.txt  raindropiopy.cli.commands.help.rst.txt  raindropiopy.cli.commands.manage.rst.txt  raindropiopy.cli.commands.rst.txt  raindropiopy.cli.commands.search.rst.txt  raindropiopy.cli.commands.view_edit.rst.txt  raindropiopy.cli.models.create_request.rst.txt  raindropiopy.cli.models.event_loop.rst.txt  raindropiopy.cli.models.raindrop_state.rst.txt  raindropiopy.cli.models.rst.txt  raindropiopy.cli.models.search_state.rst.txt  raindropiopy.cli.models.spinner.rst.txt  raindropiopy.cli.rst.txt  raindropiopy.models.rst.txt  raindropiopy.rst.txt
docs/source/: conf.py
docs_source/: conf.py  modules.rst  raindropiopy.rstxx
examples/: RUN_ALL.py  create_collection.py  create_raindrop_file.py  create_raindrop_link.py  edit_collection.py  edit_raindrop.py  get_meta.py  list_authorised_user.py  list_collections.py  list_system_collections.py  list_tags.py  sample_upload.toml  search_raindrop.py
examples/flasktest/: app.py
raindropiopy/: __init__.py  __version__.py  api.py  models.py
raindropiopy/api/: __init__.py  api.py  models.py
raindropiopy/cli/: __init__.py  cli.py
raindropiopy/cli/commands/: __init__.py  create.py  help.py  manage.py  search.py  view_edit.py
raindropiopy/cli/models/: createRequest.py  create_request.py  eventLoop.py  event_loop.py  raindropState.py  raindrop_state.py  searchState.py  search_state.py  spinner.py
raindropiopy/tests/cli/cassettes/: test_raindrop_state
raindroppy/: __init__.py  api.py  models.py
raindroppy/api/: __init__.py  api.py  models.py
raindroppy/cli/: __init__.py  __main__.py  _cli.py  cli.py  command_add.py  command_create.py  command_help.py  command_manage.py  command_search.py  command_upload.py  lui.py  models.py  raindroppy.py  run.py  spinner.py  spinners.py  ui.py  upload.toml  utilities.py
raindroppy/cli/commands/: __init__.py  add.py  create.py  help.py  manage.py  search.py  show.py  status.py
raindroppy/cli/models/: __init__.py  createRequest.py  eventLoop.py  raindropState.py
samples/: create_collection.py  create_raindrop_file.py  create_raindrop_link.py  edit_bookmark.py  edit_collection.py  edit_raindrop.py  list_authorised_user.py  list_collections.py  list_tags.py  new_bookmark.py  search_bookmark.py  search_raindrop.py  upload_file.py  user.py
samples/flasktest/: app.py
tests/: __init__.py  conftest.py  test_raindroppy.py
tests/api/: conftest.py  test_api.py  test_collection.py  test_collections.py  test_mocked_api.py  test_models_api.py  test_models_collection.py  test_models_raindrop.py  test_models_tag.py  test_models_user.py  test_raindrop.py  test_tag.py  test_tags.py  test_user.py
tests/api/cassettes/: test_collection_lifecycle.yaml  test_get_collections.yaml  test_get_tags.yaml  test_get_user.yaml  test_lifecycle_raindrop_file.yaml  test_lifecycle_raindrop_link.yaml  test_search.yaml  test_system_collections.yaml
tests/cli/: conftest.py  test_cli.py  test_cli_main_loop.py  test_cli_pexpect.py  test_commands_create.py  test_models_raindropState.py
tests/cli/cassettes/: test_cli_pexpect.yaml  test_raindrop_state  test_raindrop_state.yaml
