[tool.poetry]
name = "raindrop-io-py"
version = "0.0.10"
description = "API and terminal-based CLI for Raindrop.io bookmark manager"
authors = ["Peter Borocz <peter.borocz+raindrop-io-py@google.com>"]
classifiers = ['License :: OSI Approved :: MIT License', 'Programming Language :: Python :: 3']
include = ["LICENSE",]
keywords = ["python"]
license = "MIT"
readme = "README.org"
packages = [{ include = "raindropiopy" }]

homepage = "https://github.com/PBorocz/raindrop-io-py"
repository = "https://github.com/PBorocz/raindrop-io-py"

[tool.poetry.scripts]
raindrop-io-py = "raindropiopy.cli.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
requests-oauthlib = "^1.3.1"
python-dateutil = "^2.8.2"
tomli = "^2.0.1"
humanize = "^4.4.0"
pyfiglet = "^0.8.post1"
prompt-toolkit = "^3.0.36"
rich = "^13.2.0"
jashin = "^0.0.7"

[tool.poetry.group.dev.dependencies]
python-language-server = "^0.36.2"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
vulture = "^2.7"
requests = "^2.28.2"
manage = {git = "https://github.com/PBorocz/manage"}
vcrpy = "^4.2.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: marks tests as runnable all the time, locally and fast.",
    "integration: tests that run against a live Raindrop environment, slower.",
]

# When we're ready (from https://fpgmaas.github.io/cookiecutter-poetry/)
# [tool.mypy]
# files = ["example_project"]
# disallow_untyped_defs = "True"
# disallow_any_unimported = "True"
# no_implicit_optional = "True"
# check_untyped_defs = "True"
# warn_return_any = "True"
# warn_unused_ignores = "True"
# show_error_codes = "True"

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
       # Which Ruff suites are we running?
       # (presented in order from the Ruff documentation page)
       "F",                    # Pyflakes
       "E", "W",               # Pycodestyle (Errors and Warnings respectively)
       "C90",                  # Mccabe
       "I",                    # Isort
       "D",                    # Pydocstyle
       # "UP",                 # pyupgrade
       # "N",                  # pep8-naming
       "YTT",                  # flake8-2020
       # "ANN",                # flake8-annotations
       # "S",                  # flake8-bandit
       # "BLE",                # flake8-blind-except
       # "FBT",                # flake8-boolean-trap
       # "B",                  # flake8-bugbear
       # "A",                  # flake8-builtins
       # "C4",                 # flake8-comprehensions
       # "T10",                # flake8-debugger
       # "EM",                 # flake8-errmsg
       # "ISC",                # flake8-implicit-str-concat
       # "ICN",                # flake8-import-conventions
       # "T20",                # flake8-print
       # "PT",                 # flake8-pytest-style
       # "Q",                  # flake8-quotes
       # "RET",                # flake8-return
       # "SIM",                # flake8-simplify
       # "TID",                # flake8-tidy-imports
       # "ARG",                # flake8-unused-arguments
       # "DTZ",                # flake8-datetimez
       # "ERA",                # eradicate
       # "PD",                 # pandas-vet
       # "PGH",                # pygrep-hooks
       # "PLC, PLE, PLR, PLW", # Pylint
       # "PIE",                # flake8-pie
       "COM",                  # flake8-commas
       # "RUF",                # Ruff-specific rules
       ]
ignore = ["D213", "E402", "I001"]

[tool.ruff.pydocstyle]
# For more info, see:
# https://github.com/charliermarsh/ruff#does-ruff-support-numpy--or-google-style-docstrings
convention = "google"

[tool.ruff.mccabe]
max-complexity = 13

[tool.vulture]
# Look for dead code (methods, variables etc.): https://github.com/jendrikseipp/vulture
# But NOT through pre-commit! (see api/models.py:create_link for explanation)
min_confidence = 80
paths = ["raindropiopy", "examples"]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
